--- a/src/Germadent.UI/Windows/AuthorizationWindow.xaml
+++ b/src/Germadent.UI/Windows/AuthorizationWindow.xaml
@@ -243,7 +243,6 @@
                                     SnapsToDevicePixels="True" UseLayoutRounding="True" />
                             <TextBox Grid.Column="0" x:Name="PART_EditableTextBox"
                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                     IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
                                      Margin="{TemplateBinding Padding}"
                                      Style="{StaticResource ComboBoxEditableTextBoxStyle}"
                                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
@@ -336,7 +335,7 @@
                 <Setter Property="Padding" Value="6,1,6,2" />
                 <Setter Property="VerticalContentAlignment" Value="Center" />
                 <Setter Property="ItemContainerStyle" Value="{StaticResource StlnComboBoxItemStyle}" />
-                <Setter Property="MinHeight" Value="23" />
+                <Setter Property="MinHeight" Value="24" />
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type ComboBox}">
@@ -400,7 +399,7 @@
                         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
                         <Setter Property="Padding" Value="3,1,3,2" />
                         <Setter Property="ItemContainerStyle" Value="{StaticResource StlnComboBoxItemStyle}" />
-                        <Setter Property="MinHeight" Value="23" />
+                        <Setter Property="MinHeight" Value="24" />
                         <Setter Property="Template" Value="{StaticResource StlnComboBoxEditableTemplate}" />
                     </Trigger>
                 </Style.Triggers>
@@ -640,11 +639,13 @@
 
             <TextBlock Grid.Row="0" Grid.Column="0" Text="{x:Static properties:Resources.AuthorizationWindow_UserName}"
                        HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0,0,6,6" />
-            <TextBox Grid.Row="0" Grid.Column="1" x:Name="UserNameTextBox"
-                     Style="{StaticResource StlnTextBoxStyle}" Height="23" Margin="0,0,0,6"
-                     VerticalAlignment="Center" DataContextChanged="UserNameTextBoxDataContextChanged"
-                     Text="{Binding UserName, UpdateSourceTrigger=PropertyChanged}"
-                     AutomationProperties.AutomationId="textLogin" />
+            <ComboBox Grid.Row="0" Grid.Column="1" x:Name="UserNameTextBox" IsEditable="True"
+                      Style="{StaticResource StlnComboBoxStyle}" Height="23" Margin="0,0,0,6"
+                      ItemsSource="{Binding UserNames}"
+                      VerticalAlignment="Center"
+                      DataContextChanged="UserNameTextBoxDataContextChanged"
+                      Text="{Binding UserName, UpdateSourceTrigger=PropertyChanged}"
+                      AutomationProperties.AutomationId="textLogin" />
 
             <TextBlock Grid.Row="1" Grid.Column="0" Text="{x:Static properties:Resources.AuthorizationWindow_Password}"
                        HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0,0,6,6" />
