--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/SalaryCalculationWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/SalaryCalculationWindow.xaml
@@ -40,6 +40,7 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="Сотрудник" VerticalAlignment="Center"/>
             <ComboBox Grid.Column="1" Margin="6,0,0,0" Width="350"
@@ -60,8 +61,10 @@
             <TextBlock Grid.Column="4" Text="по" VerticalAlignment="Center" Margin="12,0,0,0"/>
             <DatePicker Grid.Column="5" Margin="6,0,0,0" Width="100"
                         SelectedDate="{Binding DateTo}"/>
-            <Button Grid.Column="6" Margin="12,0,0,0" Content="Рассчитать" Width="100"
+            <Button Grid.Column="6" Margin="12,0,0,0" Content="Рассчитать" Width="110"
                     Command="{Binding CalculateSalaryCommand}"/>
+            <Button Grid.Column="7" Content="Распечатать" Margin="6,0,0,0" Width="110"
+                    Command="{Binding PrintSalaryReportCommand}" />
         </Grid>
 
         <Grid Grid.Row="1">
@@ -155,10 +158,12 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <TextBlock Grid.Row="1" HorizontalAlignment="Right" FontSize="14" Margin="0,6,0,0">
-                <Run Text="Итого:"/>
-                <Run Text="{Binding Salary, Mode=OneWay, StringFormat=C, ConverterCulture='ru-RU'}" FontWeight="SemiBold"/>
-            </TextBlock>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,6,0,0">
+                <TextBlock FontSize="14" >
+                    <Run Text="Итого:"/>
+                    <Run Text="{Binding Salary, Mode=OneWay, StringFormat=C, ConverterCulture='ru-RU'}" FontWeight="SemiBold"/>
+                </TextBlock>
+            </StackPanel>
 
             <Border Grid.Row="0" Grid.RowSpan="2" Background="{x:Static SystemColors.ControlBrush}"
                     Visibility="{Binding IsBusy, Converter={StaticResource BoolToVisibilityConverter}}">
