--- a/src/Germadent.UI/Windows/AboutWindow.xaml
+++ b/src/Germadent.UI/Windows/AboutWindow.xaml
@@ -17,44 +17,41 @@
 		MinWidth="350"
 		MinHeight="300"
 		d:DataContext="{d:DesignInstance Type=designTime:DesignMockAboutViewModel, IsDesignTimeCreatable=True}">
-	<Window.Resources>
-		<ResourceDictionary>
-			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter"/>
-		</ResourceDictionary>	
-	</Window.Resources>
-	<Border>
-		<Border.LayoutTransform>
-			<ScaleTransform CenterX="0" CenterY="0"
-				ScaleX="{Binding UiScale}"
-				ScaleY="{Binding UiScale}"/>
-		</Border.LayoutTransform>
-		<Grid MinHeight="300" Background="#fff2f2f2" UseLayoutRounding="True">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="96" />
-				<ColumnDefinition Width="*" />
-			</Grid.ColumnDefinitions>
-			<Grid.RowDefinitions>
-				<RowDefinition />
-				<RowDefinition Height="Auto" />
-			</Grid.RowDefinitions>
-			<!-- Иконка -->
-			<Image HorizontalAlignment="Center" VerticalAlignment="Top" Margin="24" Source="{Binding ApplicationIcon}" />
-			<!-- О программе -->
-			<DockPanel Grid.Row="0" Grid.Column="1" Margin="0,12,12,12" LastChildFill="False">
-				<TextBlock DockPanel.Dock="Top" Margin="0,3,0,0" Text="{Binding ApplicationName}" FontSize="13pt" 
+    <Window.Resources>
+        <ResourceDictionary>
+            <converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter"/>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Border>
+        <Grid MinHeight="300" Background="#fff2f2f2" UseLayoutRounding="True">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="96" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <!-- Иконка -->
+            <Image HorizontalAlignment="Center" VerticalAlignment="Top" Margin="24" Source="{Binding ApplicationIcon}" />
+
+            <!-- О программе -->
+            <DockPanel Grid.Row="0" Grid.Column="1" Margin="0,12,12,12" LastChildFill="False">
+                <TextBlock DockPanel.Dock="Top" Margin="0,3,0,0" Text="{Binding ApplicationName}" FontSize="13pt" 
 						   AutomationProperties.AutomationId="textApplicationName"/>
-				<TextBlock DockPanel.Dock="Top" Margin="0,6,0,6" AutomationProperties.AutomationId="textApplicationVersion">
+                <TextBlock DockPanel.Dock="Top" Margin="0,6,0,6" AutomationProperties.AutomationId="textApplicationVersion">
 					<Run Text="{x:Static resources:Resources.AboutWindow_ApplicationVersionName}" /><Run Text="{Binding ApplicationVersion}"/>
-				</TextBlock>
-				<TextBlock DockPanel.Dock="Top" Text="{Binding AdditionalInfo}" 
+                </TextBlock>
+                <TextBlock DockPanel.Dock="Top" Text="{Binding AdditionalInfo}" 
 						   AutomationProperties.AutomationId="textAdditionalInfo"
 						   Visibility="{Binding RelativeSource={RelativeSource Self}, Path=Text, Converter={StaticResource EmptyStringToVisibilityConverter}}" TextWrapping="Wrap" />
-				<TextBlock DockPanel.Dock="Bottom">
+                <TextBlock DockPanel.Dock="Bottom">
 					<Hyperlink Command="{Binding GoToSiteUrlCommand}" AutomationProperties.AutomationId="textSiteUrl"><Run Text="{Binding SiteUrl}"/></Hyperlink>
-				</TextBlock>
-				<TextBlock DockPanel.Dock="Bottom">
+                </TextBlock>
+                <TextBlock DockPanel.Dock="Bottom">
 					<Hyperlink Command="{Binding GoToEmailCommand}" AutomationProperties.AutomationId="textEmail"><Run Text="{Binding Email}"/></Hyperlink>
-				</TextBlock>
+                </TextBlock>
                 <Grid DockPanel.Dock="Bottom">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -64,19 +61,31 @@
                         <RowDefinition />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0"><TextBlock><Run Text="{x:Static resources:Resources.AboutWindow_PhonesName}" /></TextBlock></TextBlock>
-                    <TextBlock Grid.Row="0" Grid.Column="1"><TextBlock Visibility="{Binding TelephoneSupport, Converter={StaticResource EmptyStringToVisibilityConverter}}"><Run Text="{Binding TelephoneSupport}"/></TextBlock></TextBlock>
-                    <TextBlock Grid.Row="1" Grid.Column="1"><TextBlock Visibility="{Binding Telephone, Converter={StaticResource EmptyStringToVisibilityConverter}}"><Run Text="{Binding Telephone}"/></TextBlock></TextBlock>
+                    <TextBlock Grid.Row="0" Grid.Column="0">
+                        <TextBlock>
+                            <Run Text="{x:Static resources:Resources.AboutWindow_PhonesName}" />
+                        </TextBlock>
+                    </TextBlock>
+                    <TextBlock Grid.Row="0" Grid.Column="1">
+                        <TextBlock Visibility="{Binding TelephoneSupport, Converter={StaticResource EmptyStringToVisibilityConverter}}">
+                            <Run Text="{Binding TelephoneSupport}"/>
+                        </TextBlock>
+                    </TextBlock>
+                    <TextBlock Grid.Row="1" Grid.Column="1">
+                        <TextBlock Visibility="{Binding Telephone, Converter={StaticResource EmptyStringToVisibilityConverter}}">
+                            <Run Text="{Binding Telephone}"/>
+                        </TextBlock>
+                    </TextBlock>
                 </Grid>
                 <TextBlock DockPanel.Dock="Bottom" Margin="0,12,0,0" AutomationProperties.AutomationId="textCopyright">
 					<Run Text="&#169; " /><Run Text="{Binding Copyright}"/>
-				</TextBlock>
-			</DockPanel>
-			<!-- Подвал -->
-			<Border Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="1" BorderThickness="0,1,0,0" BorderBrush="#ffcccccc">
-				<Button Content="OK" IsDefault="True" IsCancel="True" Width="75" Height="23" HorizontalAlignment="Right" Margin="12"
-						AutomationProperties.AutomationId="cmdOk"/>
-			</Border>
-		</Grid>
-	</Border>
+                </TextBlock>
+            </DockPanel>
+            
+            <Separator Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" />
+
+            <Button Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="0" Content="OK" IsDefault="True" IsCancel="True" Width="75" Height="23" HorizontalAlignment="Right" Margin="12"
+                    AutomationProperties.AutomationId="cmdOk"/>
+        </Grid>
+    </Border>
 </windows:BaseDialogWindow>
