--- a/src/Germadent.Rms.App/Views/OrdersFilterWindow.xaml
+++ b/src/Germadent.Rms.App/Views/OrdersFilterWindow.xaml
@@ -44,6 +44,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
@@ -100,6 +102,7 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
+            <CheckBox Grid.Row="7" Grid.Column="1" Margin="6,6,0,0" Content="Показать только заказ-наряды с моими работами"/>
         </Grid>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,6,0,0"
