--- a/src/Germadent.Rms.App/Views/OrdersFilterWindow.xaml
+++ b/src/Germadent.Rms.App/Views/OrdersFilterWindow.xaml
@@ -45,8 +45,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" Text="Подразделение" VerticalAlignment="Top" Margin="0"/>
@@ -102,7 +102,8 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <CheckBox Grid.Row="7" Grid.Column="1" Margin="6,6,0,0" Content="Показать только заказ-наряды с моими работами"/>
+            <CheckBox Grid.Row="7" Grid.Column="1" Margin="6,6,0,0" Content="Показывать только заказ-наряды с моими работами"
+                      IsChecked="{Binding ShowOnlyMyOrders}"/>
         </Grid>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,6,0,0"
